Fix off-center chevron

--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ html.js .scrollreveal {
     animation-delay: 2000ms;
 }
 
-#home-bottom-button {
-    animation-delay: 2500ms;
-}
-
 .btn-primary {
     background-color: #880000;
     border-color: #880000;
@@ -148,8 +144,14 @@ section#home {
 .video-background .bottom-button {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
     cursor: pointer;
     animation-delay: 2500ms;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .video-background .bottom-button .chevron {
